--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@nestjs/serve-static": "^4.0.2",
     "path": "^0.12.7",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
