--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "workspaces": [
+    "example/react-example",
+    "example/vue-example"
+  ],
   "scripts": {
-    "build": "nest build",
+    "build": "npm-run-all build:nest build:workspaces",
+    "build:nest": "nest build",
+    "build:workspaces": "npm run build --workspaces",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -46,6 +52,7 @@
     "mongodb": "^6.11.0",
     "mongodb-memory-server": "^10.1.2",
     "mongoose": "^8.8.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
