--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Publish container image
         run: |
           docker login -u ${{ secrets.DOCKER_CREDENTIALS_USERNAME }} -p ${{ secrets.DOCKER_CREDENTIALS_PASSWORD }}
-          docker build -t ${{ vars.DOCKER_NAMESPACE }}/duice-example:${{ RELEASE_TAG }} -t ${{ vars.DOCKER_NAMESPACE }}/duice-example:latest .
+          docker build -t ${{ vars.DOCKER_NAMESPACE }}/duice-example:$RELEASE_TAG -t ${{ vars.DOCKER_NAMESPACE }}/duice-example:latest .
           docker push ${{ secrets.DOCKER_NAMESPACE }}/duice-example:latest
