--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,11 @@ jobs:
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git fetch origin
-          git tag -f $RELEASE_TAG
-          git push -f origin $RELEASE_TAG
+          git tag -f ${{ env.RELEASE_TAG }}
+          git push -f origin ${{ env.RELEASE_TAG }}
       - name: Publish container image
         run: |
           docker login -u ${{ secrets.DOCKER_CREDENTIALS_USERNAME }} -p ${{ secrets.DOCKER_CREDENTIALS_PASSWORD }}
-          docker build -t ${{ vars.DOCKER_NAMESPACE }}/duice-example:$RELEASE_TAG -t ${{ vars.DOCKER_NAMESPACE }}/duice-example:latest .
-          docker push ${{ secrets.DOCKER_NAMESPACE }}/duice-example
+          docker build -t ${{ vars.DOCKER_NAMESPACE }}/duice-example:${{ env.RELEASE_TAG }} -t ${{ vars.DOCKER_NAMESPACE }}/duice-example:latest .
+          docker push ${{ secrets.DOCKER_NAMESPACE }}/duice-example:${{ env.RELEASE_TAG }}
+          docker push ${{ secrets.DOCKER_NAMESPACE }}/duice-example:latest
