--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,4 @@ jobs:
           region: us-central1
           project_id: ${{ vars.GCP_PROJECT_ID }}
           service: duice-example
-          image: docker.io/${{ vars.DOCKER_NAMESPACE }}/duice-example:${{ RELEASE_TAG }}
+          image: docker.io/${{ vars.DOCKER_NAMESPACE }}/duice-example:${{ env.RELEASE_TAG }}
